시리즈 추가 로직 및 에러
