# openapi.json
@@ -53,7 +53,10 @@
             }
           },
           "404": {
-            "description": "Not Found"
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
           }
         },
         "tags": ["crawler"]
@@ -177,6 +180,18 @@
             "schema": {
               "$ref": "#/definitions/EpisodeCreateResponse"
             }
+          },
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "500": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
           }
         },
         "tags": ["crawler"]
@@ -285,6 +300,18 @@
             "schema": {
               "$ref": "#/definitions/Series"
             }
+          },
+          "404": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "500": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
           }
         },
         "tags": ["crawler"]
@@ -313,7 +340,10 @@
             }
           },
           "404": {
-            "description": "Not Found"
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
           }
         },
         "tags": ["crawler"]
@@ -427,6 +457,18 @@
             "description": "",
             "schema": {
               "$ref": "#/definitions/EpisodeCreateResponse"
+            }
+          },
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "500": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
             }
           }
         },
@@ -727,6 +769,30 @@
         "user": {
           "title": "User",
           "type": "integer"
+        }
+      }
+    },
+    "ErrorResponse": {
+      "required": ["error_code", "message", "detail"],
+      "type": "object",
+      "properties": {
+        "error_code": {
+          "title": "Error code",
+          "description": "에러 코드",
+          "type": "string",
+          "minLength": 1
+        },
+        "message": {
+          "title": "Message",
+          "description": "사용자 친화적인 에러 메시지",
+          "type": "string",
+          "minLength": 1
+        },
+        "detail": {
+          "title": "Detail",
+          "description": "상세 에러 정보",
+          "type": "string",
+          "minLength": 1
         }
       }
     },
