# src/types/error.ts
@@ -1,0 +1,1 @@
+export type { ErrorResponse as ErrorResponse } from '@/api/schemas';
